--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "moerlong/comMoerlongBL",
+    "name": "moerlong/com-moerlong-bl",
     "description": "Third party message push",
     "authors": [
         {
